# teletgram_chat_gpt

./: .env.example  pyproject.toml
app/: app.py
app/utils/: __init__.py  chat_gpt.py  db_dialog.py
